Infrastructure.yaml
Description: >
  Create Application Load Balancer resources for Blue/Green Deployment on ECS. For further reference, please review BluegreenRepo ==> https://github.com/awslabs/ecs-blue-green-deployment

Parameters:

  StackName:
    Type: String

  ALBName:
    Type: String

  ClusterName:
    Type: String
  
  TaskExecutionRoleName:
    Type: String

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${AWS::StackName}-alb
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "TCP"
          FromPort: 80
          ToPort: 80
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "TCP"
          FromPort: 8080
          ToPort: 8080
      VpcId: 
        Fn::ImportValue:
          !Join [':', [!Ref 'StackName', 'VpcId']]

  FargateECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Ref ClusterName

  FargateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: ALBSecurityGroup
    Properties:
      GroupDescription: !Sub ${AWS::StackName}-Fargate
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref ALBSecurityGroup
          IpProtocol: "TCP"
          FromPort: 80
          ToPort: 80
        - SourceSecurityGroupId: !Ref ALBSecurityGroup
          IpProtocol: "TCP"
          FromPort: 3000
          ToPort: 3000          
      VpcId: 
        Fn::ImportValue:
          !Join [':', [!Ref 'StackName', 'VpcId']]

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: FargateSecurityGroup
    Properties:
      GroupDescription: !Sub ${AWS::StackName}-Aurora
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref FargateSecurityGroup
          IpProtocol: "TCP"
          FromPort: 3306
          ToPort: 3306
      VpcId: 
        Fn::ImportValue:
          !Join [':', [!Ref 'StackName', 'VpcId']]

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref ALBName
      Scheme: internet-facing
      Type: application
      Subnets:
        - Fn::ImportValue:
            !Join [':', [!Ref 'StackName', 'PublicSubnet1']]
        - Fn::ImportValue:
            !Join [':', [!Ref 'StackName', 'PublicSubnet2']]
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: !Ref ALBName


  # This is a role which is used by the ECS tasks themselves.
  FargateTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs-tasks.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      RoleName: !Ref TaskExecutionRoleName
      Policies:
        - PolicyName: AmazonECSTaskExecutionRolePolicy
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
                # Allow the ECS Tasks to download images from ECR
                - 'ecr:GetAuthorizationToken'
                - 'ecr:BatchCheckLayerAvailability'
                - 'ecr:GetDownloadUrlForLayer'
                - 'ecr:BatchGetImage'

                # Allow the ECS tasks to upload logs to CloudWatch
                - 'logs:CreateLogStream'
                - 'logs:PutLogEvents'
              Resource: '*'        
Outputs:
  ServiceUrl:
    Description: URL of the load balancer for the sample service.
    Value: !Sub http://${LoadBalancer.DNSName}
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'ServiceUrl' ] ]

  ProxyUrl:
    Description: URL for Api Gateway to use for sub resources.
    Value: !Sub http://${LoadBalancer.DNSName}/{proxy}
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'ProxyUrl' ] ]

  FargateECSCluster:
    Description: Name of the Fargate cluster
    Value: !Ref 'FargateECSCluster'
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'FargateECSCluster' ] ]

  FargateSecurityGroup:
    Description: The Security group for the Fargate cluster
    Value: !Ref 'FargateSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'FargateSecurityGroup' ] ]

  DatabaseSecurityGroup:
    Description: The Security group for the Aurora Database cluster
    Value: !Ref 'DatabaseSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'DatabaseSecurityGroup' ] ]

  LoadBalancer:
    Description: The ARN of the Load Balancer
    Value: !Ref LoadBalancer
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'LoadBalancer' ] ]

  FargateTaskExecutionRole:
    Description: The ARN of the ECS role
    Value: !Ref TaskExecutionRoleName
    Export:
      Name: !Join [ ':', [ !Ref 'StackName', 'FargateTaskExecutionRole' ] ]
